--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -76,6 +76,8 @@
       
       .card-img-top{
         margin-top: 5px;
+  height: 80%;
+        width: 100%;
 
       }
       .btn {
@@ -108,5 +110,28 @@
         margin: 1rem;
       }
 
+      
+.skillBox {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.marquee-box .skill {
+  display: inline-block;
+  text-align: center;
+  margin-right: 20px;
+   /* Adjust the spacing as needed */
+   margin-left: 20px;
+}
+
+.logo {
+  display: block;
+  margin: 0 auto;
+}
+
+.logoname {
+  margin-top: 10px;
+  text-align: center;
+}
 
       
