--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -53,3 +53,43 @@
     border-bottom: 3px solid yellow;
 }
 
+
+.mobMenu{
+    display: none;
+    object-fit: cover;
+    height: 1.8rem;
+}
+.navMenu{
+    position: absolute;
+    top: 4rem;
+    right: 2rem;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    height: fit-content;
+    min-width: 15rem;
+    background: rgb(40, 40, 40);
+    border-radius: 1rem;
+}
+
+.listItems{
+    color: white;
+    padding: 0,5rem 3rem;
+    margin: 0.25rem;
+    background: rgb(30,30,30);
+}
+
+@media screen and (max-width: 700px){
+    .mobMenu{
+        display: flex;
+    }
+
+    .desktopMenu{
+        display: none;
+    }
+
+    .desktopMenuBtn{
+        display: none;
+    }
+}
