--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -117,7 +117,7 @@
 }
 
 .marquee-box .skill {
-  display: inline-block;
+  display: flex;
   text-align: center;
   margin-right: 20px;
    /* Adjust the spacing as needed */
